# maestro

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/: README.md
docs/adr/: 0001-control-plane.md  0002-execution-aggregate.md  0003-role-vs-agent.md  0004-capabilities.md  0005-event-model.md  0006-workspaces.md  0007-provider-interface.md  README.md
docs/architecture/: 01_Vision.md  02_Principles.md  03_System_Architecture.md  04_Domain_Model.md  05_Workflows.md  06_Roles.md  07_Execution.md  08_Capabilities.md  09_Workspace.md  10_Knowledge.md  11_Providers.md  12_Event_System.md  13_State_Machine.md  14_Persistence.md  15_Web_API.md  16_Web_UI.md  17_Security.md  18_Extensibility.md  19_Deployment.md  20_Roadmap.md
docs/development/: API_STYLE_GUIDE.md  ARCHITECTURAL_DECISIONS.md  ARCHITECTURE_CHECKLIST.md  CODE_REVIEW_GUIDELINES.md  CODING_GUIDELINES.md  CONTRIBUTING.md  ERROR_HANDLING.md  GIT_WORKFLOW.md  IMPLEMENTATION_PLAN.md  INITIAL_IMPLEMENTATION_AUDIT.md  LOGGING_GUIDELINES.md  MVP_DEMO.md  MVP_RELEASE_NOTES.md  README.md  RELEASE_PROCESS.md  RESOURCE_SPECIFICATION.md  TASK_TEMPLATE.md  TESTING_GUIDELINES.md  UI_GUIDELINES.md
src/maestro/: __init__.py  __main__.py  config.py  logging.py
tests/: test_api.py  test_cli.py  test_config.py  test_logging.py
tests/application/: test_approval_service.py  test_artifact_service.py  test_coding_runtime.py  test_coding_tools.py  test_controller_framework.py  test_execution_service.py  test_local_runner.py  test_planner_runtime.py  test_project_service.py  test_provider_health_service.py  (+5 more)
(+102 files in other folders)
