[project]
name = "maestro"
version = "0.1.0"
description = "Local-first AI orchestration control plane."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.124.0",
  "pydantic-settings>=2.12.0",
  "typer>=0.20.0",
  "uvicorn[standard]>=0.38.0",
]

[project.scripts]
maestro = "maestro.presentation.cli:app"

[dependency-groups]
dev = [
  "httpx>=0.28.0",
  "mypy>=1.19.0",
  "pre-commit>=4.5.0",
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["uvicorn"]
ignore_missing_imports = true
